# azure-devops-app

./: .env-sample  .gitignore  IR.md  Notes.md  README.md  azservice.js  config.js  create_db.py  db.sqlite3  devopsME.js  index.js  package-lock.json  package.json  teamsBot.js  teamsapp.local.yml  teamsapp.yml
IR/layer0/: introspection.yml  scope.yml  transition.yml
IR/layer1/: introspection.yml  scope.yml  transition.yml
IR/layer2/: introspection.yml  scope.yml  transition.yml
agent/: README.md  main.py  pyproject.toml
api/: common.js  create.js  createWorkItem.js  get-all.js  get-one.js  getWorkItem.js  getWorkItemDetails.js  index.js  update.js  updateWorkitem.js
appPackage/: manifest.json
backend/: database.py  db.sqlite3  main.py  pyproject.toml  schema.py
cards/: createCard.js  editCard.js  searchItemCard.js  taskCard.js
infra/: azure.bicep  azure.parameters.json
prompts/generate/: config.json  skprompt.txt
teamsBot/: index.js
teamsBot/cards/: createCard.js  editCard.js  searchItemCard.js  taskCard.js  viewCard.js
